2010-07-18 14:12:41 GhostlyDeath
	
	Strawberry Doom:
		Add configure option: --enable-max-optimization (-O3 -g0)
		Add configure option: --enable-max-debug (-O0 -g3)

2010-06-30 00:50:07 GhostlyDeath

	Strawberry Doom:
		Add particles!
		Add -flip, so levels are flipped on load - the game is more boring this way.
			(pun on r1109 "Flip all levels on load - the game is more fun this way.")

2010-06-29 00:59:45 GhostlyDeath
	
	Strawberry Doom:
		Doom2+ Limits.

2010-06-29 00:45:40 GhostlyDeath

	Strawberry Doom:
		Return where V_DrawPatch would error out, so us experts can use our sensitivities of 100+ with no accidental option menu hits.

2010-06-29 00:36:39 GhostlyDeath

	Strawberry Doom:
		Use network names instead of GREEN, INDIGO, etc. and Player #, disables dehacked replacement for these however.
		Allow Chocolate Doom clients to join a Strawberry Doom Server.

2010-06-28 23:50:47 GhostlyDeath

	Strawberry Doom:
		Change color handling in textscreen stuff so that it's more universalized so we don't have to spend shit loads of time trying to change colors around even though it will never change.

2010-01-31 18:21:50 fraggle
	
	Change Windows resource file to use PACKAGE_COPYRIGHT and
	PACKAGE_LICENSE macros.

2010-01-30 16:14:04 fraggle
	
	Change directory to home directory before launching the game, so that
	recorded demos go somewhere sensible.

2010-01-30 16:04:24 fraggle
	
	Set launch button as default button, so that it is possible to launch
	the game by pressing return.

2010-01-30 00:37:17 fraggle
	
	Rename mus2mid functions to be consistent with coding standard.

2010-01-29 23:28:35 fraggle
	
	Remove unused PACKAGE_LONGDESC.

2010-01-29 19:17:56 fraggle
	
	When doing a MUS to MID conversion, allocate MIDI channels so that the
	lowest-numbered MIDI channels are used before higher-numbered ones.
	Fixes ear-piercing whistle sound in the MAP05 music when playing with
	timidity and EAWPATS (thanks entryway / HackNeyed).

2010-01-29 03:55:20 fraggle
	